implement order index table and rewix api

--- a/app/views/layouts/embedded_app.html.erb
+++ b/app/views/layouts/embedded_app.html.erb
@@ -15,6 +15,7 @@
     <% end %>
     <%= csrf_meta_tags %>
   </head>
+  <div id="app-root" data-orders-url="<%= orders_path %>"></div>
 
   <body class="body-tag">
     <div class="app-wrapper">
