implementation of products creation in shopify store order creation currency exchange

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,6 @@
     <title>Clique App</title>
   </head>
   <body>
-  <div id="index-table"></div>
+  <div id="products-index-path"></div>
   </body>
 </html>
