--- a/app/views/price_settings/index.html.erb
+++ b/app/views/price_settings/index.html.erb
@@ -6,6 +6,6 @@
   <title>Clique App</title>
 </head>
 <body>
-<div id="orders-index-path"></div>
+<div id="price-settings-path"></div>
 </body>
 </html>
